gateway/1.11/modules/ROOT/pages/flex-gateway-version-lifecycle.adoc
= Flex Gateway Version Lifecycle
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:page-aliases: gateway-version-lifecycle.adoc
:imagesdir: ../assets/images

Starting with Flex Gateway 1.9, MuleSoft introduces two new release channels, Edge and Long-term Support (LTS). These release channels are available for both Managed and Self-Managed Flex Gateway.

== Edge and LTS Releases for Flex Gateway

Consider the information in this table to determine which release channel best suits your requirements. 

[%header,cols="4*a"]
|===

| Channel Type | Release Cadence | Differentiators | Support Coverage

| *Edge*

a| Three times per year

    * March
    * July
    * November

| Includes new features more often and has a shorter support period for each release.

a| Flex Gateway 1.9 and later

    * Four months Standard Support
    * Four months Extended Support

Flex Gateway 1.8 and earlier

    * See https://www.salesforce.com/en-us/wp-content/uploads/sites/4/documents/legal/Agreements/versioning-back-support-policy.pdf[MuleSoft Support Policy]. 

| *LTS*

| Once a year
    
    * March

| Bundles new features in an annual release and has a longer support period for each release.

a| Flex Gateway 1.9 and later

    * Twelve months Standard Support
    * Twelve months Extended Support

Flex Gateway 1.8 and earlier

    * See https://www.salesforce.com/en-us/wp-content/uploads/sites/4/documents/legal/Agreements/versioning-back-support-policy.pdf[MuleSoft Support Policy]. 

|===

For detailed information and support timeframes for Flex Gateway 1.8 and earlier, see the https://www.salesforce.com/en-us/wp-content/uploads/sites/4/documents/legal/Agreements/versioning-back-support-policy.pdf[MuleSoft Support Policy]. 

== Deployment Models and Lifecycle Management

Flex Gateway lifecycle management varies depending on the release channel and the type of gateway.
Managed Flex Gateway instances are auto-upgraded regularly, and any available patches are applied once a month. Self-managed gateways are never patched or upgraded automatically.

[%header,cols="3*a"]
|===
| Action | Managed Gateway | Self-Managed Gateway

// Action
| Auto-upgrade
// Managed Gateway
a| 
Managed Gateways are auto-upgraded to the latest minor version within their respective channels (Edge or LTS).

    * Edge: Three times per year
    * LTS: Once a year
// Self-Managed Gateway
| No auto-upgrade capabilities

// Action
| Patches
// Managed Gateway
| Monthly auto-patching
// Self-Managed Gateway
| Available for Flex Gateway versions that are within the support period for their respective channels (Edge or LTS).

// Action
| Self-upgrade
// Managed Gateway
| You can manually upgrade to the latest version that matches your release channel (Edge or LTS) before the scheduled automatic upgrade.
// Self-Managed Gateway
| Always available

// Action
| Rollback
// Managed Gateway
| You can revert to the previous version if it's still within the release channel support period.
// Self-Managed Gateway
| Available to the previously used version

// Action
| Restart
// Managed Gateway
| Always
// Self-Managed Gateway
| Until End of Extended Support

// Action
| Keep running 
// Managed Gateway
| Always
// Self-Managed Gateway
| Until End of Extended Support

// Action
| Supportability
// Managed Gateway
| Standard Support (auto-upgrade ensures that managed gateways are always on the latest Edge or LTS version).
// Self-Managed Gateway
| Until End of Extended Support. See the https://www.salesforce.com/en-us/wp-content/uploads/sites/4/documents/legal/Agreements/versioning-back-support-policy.pdf[MuleSoft Support Policy] for more information.

|===

For information on patching, upgrading, rolling back, or deleting a gateway, see xref:flex-gateway-maintain.adoc[Maintaining a Flex Gateway]. 
